[workspace]
resolver = "2"
members = [
    "packages/maximus-ui",
    "packages/maximus-api",
    "packages/maximus-shared-models"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]

# workspace
maximus-ui = { path = "packages/maximus-ui" }
maximus-api = { path = "packages/maximus-api" }
maximus-shared-models = { path = "packages/maximus-shared-models" }

dioxus = { version = "0.7.3" }
matrix-sdk = { version = "0.16.0", default-features = false, features = ["native-tls", "anyhow"] }
serde = { version = "1.0.228", features = ["derive"] }